mobile view overlap resolved

--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ nav a {
 
   #contentGrid {
     margin: 10px;
-    row-gap: 10px;
+    row-gap: 20px;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 80px 350px 80px 400px 150px 150px 150px 150px 80px 200px;
@@ -286,5 +286,8 @@ nav a {
 
   #abtext {
     margin-bottom: 10px;
+  }
+  #myexperience {
+margin-top: 20px;
   }
 }
